force-app/main/default/objects/numm__VoucherTransaction__c/numm__VoucherTransaction__c.object-meta.xml
<CustomObject>
    <description>Ecritures générales</description>
    <label>Ecriture générale</label>
    <nameField>
        <displayFormat>EG-{00000}</displayFormat>
        <label>Ecriture générale</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ecritures générales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>