force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__AccountingLib__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountingLib__c</fullName>
    <formula>numm__IdAccountingCode__r.numm__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Libelle compte</label>
    <type>Text</type>
</CustomField>