force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Amount__c.field-meta.xml
<CustomField>
    <fullName>numm__Amount__c</fullName>
    <description>Montant de la ligne indépendant du C ou D.</description>
    <formula>IF( NOT( ISBLANK( numm__Credit__c ) ),numm__Credit__c, numm__Debit__c)</formula>
    <label>TECH Montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>