force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__BaselineVatAmount__c.field-meta.xml
<CustomField>
    <fullName>numm__BaselineVatAmount__c</fullName>
    <label>Montant TVA origine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>