force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__BypassTTC__c.field-meta.xml
<CustomField>
    <fullName>numm__BypassTTC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ne pas incorporer cette ligne dans les calcul total TTC</description>
    <label>Tech TTC non pris</label>
    <type>Checkbox</type>
</CustomField>