force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__CategorieCompte__c.field-meta.xml
<CustomField>
    <fullName>numm__CategorieCompte__c</fullName>
    <label>Catégorie de Compte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TTC</fullName>
            </value>
            <value>
                <fullName>TVA</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>