force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__CleDeRepartition__c.field-meta.xml
<CustomField>
    <fullName>numm__CleDeRepartition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clé de répartition</label>
    <referenceTo>numm__Cle_de_repartition__c</referenceTo>
    <relationshipLabel>Ecritures générales</relationshipLabel>
    <relationshipName>Ecritures_generales</relationshipName>
    <type>Lookup</type>
</CustomField>