force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__CodeExterneRoleTiers__c.field-meta.xml
<CustomField>
    <fullName>numm__CodeExterneRoleTiers__c</fullName>
    <formula>numm__IdthirdParty__r.numm__Code_Tiers_externe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CodeExterneRoleTiers</label>
    <type>Text</type>
</CustomField>