force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Credit__c.field-meta.xml
<CustomField>
    <fullName>numm__Credit__c</fullName>
    <label>Credit Piece</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>