force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__CreditAnalytique__c.field-meta.xml
<CustomField>
    <fullName>numm__CreditAnalytique__c</fullName>
    <label>Crédit Analytique</label>
    <summarizedField>numm__CosAccountingVoucher__c.numm__Credit_piece__c</summarizedField>
    <summaryForeignKey>numm__CosAccountingVoucher__c.numm__EcritureGenerale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>