force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__CreditEdition__c.field-meta.xml
<CustomField>
    <fullName>numm__CreditEdition__c</fullName>
    <formula>IF(
  ISBLANK(numm__CreditEntity__c),
  0,
  numm__CreditEntity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreditEdition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>