force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__CreditEntity__c.field-meta.xml
<CustomField>
    <fullName>numm__CreditEntity__c</fullName>
    <description>si credit piece est null prendre null sinon faire le calcul avec taux de change</description>
    <formula>IF(ISNULL(numm__Credit__c),IF(ISNULL(numm__CreditBaseline__c),NULL,IF(ISNULL(numm__Debit__c),numm__CreditBaseline__c,NULL)),numm__Tech_TauxEchange__c  * numm__Credit__c)</formula>
    <label>Credit Entité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>