force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__DateDeclarationTVA__c.field-meta.xml
<CustomField>
    <fullName>numm__DateDeclarationTVA__c</fullName>
    <description>Date à laquelle la TVA à été déclarée</description>
    <label>Date de déclaration</label>
    <type>Date</type>
</CustomField>