force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__DateFEC__c.field-meta.xml
<CustomField>
    <fullName>numm__DateFEC__c</fullName>
    <label>DateFEC</label>
    <type>Date</type>
</CustomField>