force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__DateLettrage__c.field-meta.xml
<CustomField>
    <fullName>numm__DateLettrage__c</fullName>
    <label>Date du lettrage</label>
    <type>Date</type>
</CustomField>