force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__DateValeur__c.field-meta.xml
<CustomField>
    <fullName>numm__DateValeur__c</fullName>
    <label>Date de valeur</label>
    <type>Date</type>
</CustomField>