force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__DebitAnalytique__c.field-meta.xml
<CustomField>
    <fullName>numm__DebitAnalytique__c</fullName>
    <label>Débit Analytique</label>
    <summarizedField>numm__CosAccountingVoucher__c.numm__Debit__c</summarizedField>
    <summaryForeignKey>numm__CosAccountingVoucher__c.numm__EcritureGenerale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>