force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__DebitBaseline__c.field-meta.xml
<CustomField>
    <fullName>numm__DebitBaseline__c</fullName>
    <label>Debit Origine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>