force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__DebitEdition__c.field-meta.xml
<CustomField>
    <fullName>numm__DebitEdition__c</fullName>
    <formula>IF(
  ISBLANK(numm__DebitEntity__c),
  0,
  numm__DebitEntity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DebitEdition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>