force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__DebitEntity__c.field-meta.xml
<CustomField>
    <fullName>numm__DebitEntity__c</fullName>
    <description>si debit piece est null , prendre le debit origine si celui-ci n&#39;est pas null aussi,sinon faire le calcul avec taux de change</description>
    <formula>IF(ISNULL(numm__Debit__c),IF(ISNULL(numm__DebitBaseline__c),NULL,IF(ISNULL(numm__Credit__c),numm__DebitBaseline__c,NULL)),numm__Tech_TauxEchange__c  * numm__Debit__c)</formula>
    <label>Debit Entité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>