force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__DeclareeTVA__c.field-meta.xml
<CustomField>
    <fullName>numm__DeclareeTVA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ligne de TVA déclarée</description>
    <label>Déclarée</label>
    <type>Checkbox</type>
</CustomField>