force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__EquilibreGeneraleAnalytique__c.field-meta.xml
<CustomField>
    <fullName>numm__EquilibreGeneraleAnalytique__c</fullName>
    <formula>if( ISNULL(numm__Debit__c) = false &amp;&amp; numm__Debit__c = numm__DebitAnalytique__c ,true,if( ISNULL(numm__Credit__c) = false &amp;&amp; numm__Credit__c = numm__CreditAnalytique__c ,true,false))</formula>
    <label>Equilibre générale analytique</label>
    <type>Checkbox</type>
</CustomField>