force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__GenerateSepa__c.field-meta.xml
<CustomField>
    <fullName>numm__GenerateSepa__c</fullName>
    <label>GenerateSepa</label>
    <type>Date</type>
</CustomField>