force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__GTP__c.field-meta.xml
<CustomField>
    <fullName>numm__GTP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Lorsque ce choix est coché, la facture est bonne à payer</inlineHelpText>
    <label>Bon à payer</label>
    <type>Checkbox</type>
</CustomField>