force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__IdAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>numm__IdAccountingCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte général</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipName>VoucherTransaction</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>