force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__IdEstablishment__c.field-meta.xml
<CustomField>
    <fullName>numm__IdEstablishment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Etablissement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Establishment__c.numm__Entity__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Tech_Entite__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>Pièces Ecritures</relationshipLabel>
    <relationshipName>EcrituresGeneral</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>