force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__IdInterCompany__c.field-meta.xml
<CustomField>
    <fullName>numm__IdInterCompany__c</fullName>
    <description>L&#39;IDgroupe est généré lors la pièce de vente. l&#39;écriture est ensuite récupérée pour inotialiser la facture d&#39;achat dans la société de contrepartie.</description>
    <inlineHelpText>L&#39;IDgroupe est généré lors la pièce de vente. l&#39;écriture est ensuite récupérée pour inotialiser la facture d&#39;achat dans la société de contrepartie.</inlineHelpText>
    <label>IdGroupe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>