force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__IdLettrage__c.field-meta.xml
<CustomField>
    <fullName>numm__IdLettrage__c</fullName>
    <label>IdLettrage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>