force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__IdMatchingAuto__c.field-meta.xml
<CustomField>
    <fullName>numm__IdMatchingAuto__c</fullName>
    <label>IdLettrageOLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>