force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__IdthirdParty__c.field-meta.xml
<CustomField>
    <fullName>numm__IdthirdParty__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tiers</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__IdctrlAccounting__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__IdCtrlAccounting__c</valueField>
        </filterItems>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Tech_Entite__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Pièces Ecritures (Tiers Entité)</relationshipLabel>
    <relationshipName>voucherTransaction</relationshipName>
    <type>Lookup</type>
</CustomField>