force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__IdVatProrata__c.field-meta.xml
<CustomField>
    <fullName>numm__IdVatProrata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Where GenericTable.IdObjet = 7 and VatRate.IdType = 2</description>
    <label>Prorata de TVA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__VATRate__c.numm__Prorata__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__VATRate__c</referenceTo>
    <relationshipName>ProrataTVA</relationshipName>
    <type>Lookup</type>
</CustomField>