force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__JournalLib__c.field-meta.xml
<CustomField>
    <fullName>numm__JournalLib__c</fullName>
    <formula>numm__Piece__r.numm__IdJournal__r.numm__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Libelle du journal</label>
    <type>Text</type>
</CustomField>