force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Lettrage_Pointage__c.field-meta.xml
<CustomField>
    <fullName>numm__Lettrage_Pointage__c</fullName>
    <label>Lettrage / Pointage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aucun</fullName>
            </value>
            <value>
                <fullName>Lettrée</fullName>
            </value>
            <value>
                <fullName>Pointée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>