force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Lots__c.field-meta.xml
<CustomField>
    <fullName>numm__Lots__c</fullName>
    <label>Lots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>