force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__MatchingNumber__c.field-meta.xml
<CustomField>
    <fullName>numm__MatchingNumber__c</fullName>
    <label>Numéro de Lettrage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>