force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Nombre_ecritures_analytiques__c.field-meta.xml
<CustomField>
    <fullName>numm__Nombre_ecritures_analytiques__c</fullName>
    <label>Nombre d&#39;écritures analytiques</label>
    <summaryForeignKey>numm__CosAccountingVoucher__c.numm__EcritureGenerale__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>