force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Piece__c.field-meta.xml
<CustomField>
    <fullName>numm__Piece__c</fullName>
    <label>Pièce</label>
    <referenceTo>numm__HeaderVoucher__c</referenceTo>
    <relationshipLabel>Ecritures générales</relationshipLabel>
    <relationshipName>Pieces_Ecritures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>