force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Piece_Banque__c.field-meta.xml
<CustomField>
    <fullName>numm__Piece_Banque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pièce Banque</label>
    <referenceTo>numm__HeaderVoucher__c</referenceTo>
    <relationshipLabel>Ecritures générales (Pièce Banque)</relationshipLabel>
    <relationshipName>Ecritures_Lettree</relationshipName>
    <type>Lookup</type>
</CustomField>