force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Prorata__c.field-meta.xml
<CustomField>
    <fullName>numm__Prorata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prorata</label>
    <type>Checkbox</type>
</CustomField>