force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__ProrataAmount__c.field-meta.xml
<CustomField>
    <fullName>numm__ProrataAmount__c</fullName>
    <label>Montant Prorata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>