force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__ReadOnly_KM__c.field-meta.xml
<CustomField>
    <fullName>numm__ReadOnly_KM__c</fullName>
    <formula>numm__Piece__r.numm__ReadOnly_KM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReadOnly KM</label>
    <type>Checkbox</type>
</CustomField>