force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Reglement_partiel__c.field-meta.xml
<CustomField>
    <fullName>numm__Reglement_partiel__c</fullName>
    <formula>( numm__CreditBaseline__c  -  numm__DebitBaseline__c  )  -   ( numm__CreditEntity__c  -  numm__DebitEntity__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Solde créditeur, si le champ est positif, débiteur, si le champ est créditeur</inlineHelpText>
    <label>Règlement partiel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>