force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__ResponsibleGTP__c.field-meta.xml
<CustomField>
    <fullName>numm__ResponsibleGTP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sélectionner le responsable de la facture qui validera le bon à payer</inlineHelpText>
    <label>Responsable</label>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipName>ResponsibleGTP</relationshipName>
    <type>Lookup</type>
</CustomField>