force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Retard_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>numm__Retard_de_paiement__c</fullName>
    <formula>TODAY() - numm__DueDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retard de paiement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>