force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__RTSubroge__c.field-meta.xml
<CustomField>
    <fullName>numm__RTSubroge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subrogé</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__IdctrlAccounting__r.numm__TypeDeCollectif__c</field>
            <operation>equals</operation>
            <value>SUB</value>
        </filterItems>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Tech_Entite__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Ecritures générales (Subrogé)</relationshipLabel>
    <relationshipName>Ecritures_generales</relationshipName>
    <type>Lookup</type>
</CustomField>