force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Session__c.field-meta.xml
<CustomField>
    <fullName>numm__Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>numm__Session__c</referenceTo>
    <relationshipLabel>Ecritures générales</relationshipLabel>
    <relationshipName>Ecritures_generales</relationshipName>
    <type>Lookup</type>
</CustomField>