force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Solde_Analytique__c.field-meta.xml
<CustomField>
    <fullName>numm__Solde_Analytique__c</fullName>
    <formula>numm__DebitAnalytique__c -   numm__CreditAnalytique__c</formula>
    <label>Solde Analytique</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>