force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Solde_ecriture_generale__c.field-meta.xml
<CustomField>
    <fullName>numm__Solde_ecriture_generale__c</fullName>
    <formula>numm__DebitEntity__c  -  numm__CreditEntity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Solde Débit en devise Entité moins solde Crédit en devise Entité</inlineHelpText>
    <label>Solde écriture générale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>