force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__StatutPiece__c.field-meta.xml
<CustomField>
    <fullName>numm__StatutPiece__c</fullName>
    <formula>TEXT( numm__Piece__r.numm__Statut__c )</formula>
    <label>Statut Piece</label>
    <type>Text</type>
</CustomField>