force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__TaxableEvent__c.field-meta.xml
<CustomField>
    <fullName>numm__TaxableEvent__c</fullName>
    <inlineHelpText>Sélectionner le fait générateur D pour Débit ou E pour Encaissement</inlineHelpText>
    <label>Fait Générateur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Encaissement</fullName>
            </value>
            <value>
                <fullName>Débit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>