force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_AcompteBanqueId__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_AcompteBanqueId__c</fullName>
    <label>Tech_AcompteBanqueId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>