force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_Ana1__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Ana1__c</fullName>
    <label>Tech Ana1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>