force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_AvoirFacturationHT__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_AvoirFacturationHT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use only in facturation</description>
    <label>Tech_AvoirFacturationHT</label>
    <type>Checkbox</type>
</CustomField>