force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_Categorie_Compte__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Categorie_Compte__c</fullName>
    <description>Catégorie de compte</description>
    <label>Tech Categorie Compte</label>
    <length>5</length>
    <type>Text</type>
</CustomField>