force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_CompteCompt__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_CompteCompt__c</fullName>
    <description>field tech used in cloture to know if compte general start with 6 or 7</description>
    <label>Tech_CompteCompt</label>
    <length>20</length>
    <type>Text</type>
</CustomField>