force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_DifferenceProrata__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_DifferenceProrata__c</fullName>
    <label>Tech_DifferenceProrata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>