force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_EcriEcheance__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_EcriEcheance__c</fullName>
    <description>Echeancier</description>
    <label>Tech_EcriEcheance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>