force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Entite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pour faire la dépendance du rôle du tiers(collectif et entite)</description>
    <label>Tech_Entite</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Ecritures générales</relationshipLabel>
    <relationshipName>Ecritures_generales</relationshipName>
    <type>Lookup</type>
</CustomField>