force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_Ext__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Ext__c</fullName>
    <label>Tech_Ext</label>
    <length>200</length>
    <type>Text</type>
</CustomField>