force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_MontantCreditBefore__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_MontantCreditBefore__c</fullName>
    <label>Tech_MontantCreditBefore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>