force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_MontantDebitBefore__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_MontantDebitBefore__c</fullName>
    <description>use in echeancier to calculate analytique</description>
    <label>Tech_MontantDebitBefore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>