force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_RappSel__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_RappSel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_RappSel</label>
    <type>Checkbox</type>
</CustomField>