force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_SensMontant__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_SensMontant__c</fullName>
    <formula>IF(ISBLANK(numm__Credit__c),&#39;D&#39;,&#39;C&#39;)</formula>
    <label>Tech_Sens Montant</label>
    <type>Text</type>
</CustomField>