force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_StatutPiece__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_StatutPiece__c</fullName>
    <label>Tech_StatutPiece</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Supprimé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>