force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_TauxEchange__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_TauxEchange__c</fullName>
    <label>Tech_TauxEchange</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>