force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_TypeCollectif__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_TypeCollectif__c</fullName>
    <formula>TEXT( numm__IdCtrlAccounting__r.numm__TypeDeCollectif__c )</formula>
    <label>Tech_TypeCollectif</label>
    <type>Text</type>
</CustomField>