force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Tech_ValidExercise__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_ValidExercise__c</fullName>
    <formula>IF( numm__Piece__r.numm__AccountingDate__c &gt;=  numm__Piece__r.numm__Entity__r.numm__PeriodStart__c &amp;&amp; numm__Piece__r.numm__AccountingDate__c &lt;=  numm__Piece__r.numm__Entity__r.numm__PeriodEnd__c , true, false)</formula>
    <label>Tech_ValidExercise</label>
    <type>Checkbox</type>
</CustomField>