force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__TechDatePiece__c.field-meta.xml
<CustomField>
    <fullName>numm__TechDatePiece__c</fullName>
    <formula>&quot;0&quot;</formula>
    <label>TechDatePiece</label>
    <type>Text</type>
</CustomField>