force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__TechDatePieceVF__c.field-meta.xml
<CustomField>
    <fullName>numm__TechDatePieceVF__c</fullName>
    <label>Tech Date Piece VF</label>
    <type>Date</type>
</CustomField>