force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__TechExtId__c.field-meta.xml
<CustomField>
    <fullName>numm__TechExtId__c</fullName>
    <externalId>true</externalId>
    <label>Tech Ext Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>