force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__TechMontantTVA__c.field-meta.xml
<CustomField>
    <fullName>numm__TechMontantTVA__c</fullName>
    <label>Tech Montant TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>