force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__TechPrestationTauxTVA__c.field-meta.xml
<CustomField>
    <fullName>numm__TechPrestationTauxTVA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Prestation Taux TVA</label>
    <referenceTo>numm__VATRate__c</referenceTo>
    <relationshipName>Pi_ces_Ecritures</relationshipName>
    <type>Lookup</type>
</CustomField>